Fix some author names in .bib

--- a/main.bib
+++ b/main.bib
@@ -58,7 +58,7 @@
 }
 
 @article{homotopy-theoretic-aspects,
-  author = {Lack, S.},
+  author = {Lack, Stephen},
   journal = {Journal of Homotopy and Related Structures},
   keywords = {2-monads; Quillen model categories; 2-categories},
   language = {eng},
@@ -73,7 +73,7 @@
 
 @inproceedings{lcc-categories-and-type-theory,
   title={Locally cartesian closed categories and type theory},
-  author={Seely, Robert AG},
+  author={Seely, Robert A. G.},
   booktitle={Mathematical proceedings of the Cambridge philosophical society},
   volume={95},
   number={1},
@@ -93,7 +93,7 @@
 
 @article{substitution-up-to-isomorphism,
   title={Substitution up to Isomorphism},
-  author={Curien, P-L},
+  author={Curien, Pierre-Louis},
   journal={Diagrammes},
   volume={23},
   pages={43--66},
@@ -168,7 +168,7 @@
 
 @book{enriched-kan-extensions,
   title={Kan extensions in enriched category theory},
-  author={Dubuc, Eduardo J},
+  author={Dubuc, Eduardo J.},
   volume={145},
   year={1970},
   publisher={Springer}
@@ -176,7 +176,7 @@
 
 @article{two-dimensional-monad-theory,
   title={Two-dimensional monad theory},
-  author={Blackwell, Robert and Kelly, Gregory M and Power, A John},
+  author={Blackwell, Robert and Kelly, Gregory Maxwell and Power, A. John},
   journal={Journal of pure and applied algebra},
   volume={59},
   number={1},
@@ -206,7 +206,7 @@
 
 @book{hirschhorn,
   title={Model categories and their localizations},
-  author={Hirschhorn, Philip S},
+  author={Hirschhorn, Philip S.},
   number={99},
   year={2009},
   publisher={American Mathematical Soc.}
@@ -214,7 +214,7 @@
 
 @misc{enriched-model-cats,
   title={Enriched model categories and presheaf categories},
-  author={Bertrand Guillou and J. P. May},
+  author={Bertrand Guillou and J. Peter May},
   year={2011},
   eprint={1110.3567},
   archivePrefix={arXiv},
