--- a/main.tex
+++ b/main.tex
@@ -147,7 +147,7 @@ This is done by choosing an equivalent lcc category $\Gamma \simeq \mathcal{C}$ 
 \textbf{Acknowledgements.}
 This paper benefited significantly from input by members of the research community.
 I would like to thank the organizers of the TYPES workshop 2019 and the HoTT conference 2019 for giving me the opportunity to speak about preliminary versions of the material in this paper.
-Conversations with Emily Riehl, Karol Szumiło and David White made me aware that my construction could be phrased model categorically; I believe this significantly improved the presentation.
+Conversations with Emily Riehl, Karol Szumiło and David White made me aware that the constructions in this paper could be phrased model categorically; I believe this significantly improved the presentation.
 Daniel Gratzer pointed out to me the biuniversal property of slice categories.
 Valery Isaev explained to me some aspects of the model category structure on marked objects.
 Bas Spitters provided invaluable advice and enabled me to work on this paper.
