--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 
 \begin{document}
 
-\title{A model of dependent type theory in the category of locally cartesian closed categories}
+\title{An interpretation of dependent type theory in the category of locally cartesian closed categories}
 
 \author{Martin E. Bidlingmaier}
 
