--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,8 @@ Given an lcc category $\mathcal{C}$, one interprets
   \item
     terms $\Gamma \vdash s : \sigma$ as sections $s : \Gamma \rightleftarrows \operatorname{dom} \sigma : \sigma$ to the interpretations of types.
 \end{itemize}
-A context extension $\Gamma.\sigma$ is interpreted as the domain of $\sigma$, application of substitutions $f : \Delta \rightarrow \Gamma$ to types $\Gamma \vdash \sigma$ is interpreted as pullback
+A context extension $\Gamma.\sigma$ is interpreted as the domain of $\sigma$.
+Application of substitutions $f : \Delta \rightarrow \Gamma$ to types $\Gamma \vdash \sigma$ is interpreted as pullback
 \begin{equation}
   \begin{tikzcd}
     \operatorname{dom} \sigma[f] \arrow[r] \arrow[d, "{\sigma[f]}"] \arrow[dr, phantom, near start, "\lrcorner"] & \operatorname{dom} \sigma \arrow[d, "\sigma"] \\
@@ -109,8 +110,9 @@ Removing all reference to the base category $\mathcal{C}$, we may now attempt to
 In the original interpretation, substitution in types and terms is defined by the pullback functor $f^* : \mathcal{C}_{/ \Gamma} \rightarrow \mathcal{C}_{/ \Delta}$ along a morphism $f : \Delta \rightarrow \Gamma$.
 In our new interpretation, $f$ is already an lcc functor, which we simply apply to objects and morphisms of lcc categories.
 
-The idea that the contexts of logic should be understood as different categories is by no means novel, and indeed widespread among researchers of geometric logic; see e.g. \cite[section 4.5]{locales-and-toposes-as-spaces}.
-Not surprisingly, some of the ideas in this paper have independently already been explored in \cite{au-sketches} in the context of geometric logic.
+The idea different contexts should be understood as different categories is by no means novel, and indeed widespread among researchers of geometric logic; see e.g. \cite[section 4.5]{locales-and-toposes-as-spaces}.
+Not surprisingly, some of the ideas in this paper have independently already been explored in \cite{au-sketches} for geometric logic.
+To my knowledge, however, an interpretation of type theory along those lines, especially one with strict substitution, has never been spelled out explicitly, and the present paper is an attempt at filling this gap.
 
 Like Seely's original interpretation, the naive interpretation in the category of lcc categories outlined above suffers from coherence issues:
 Lcc functors preserve lcc structure up to isomorphism, but not necessarily up to equality, and the latter would be required for a model of type theory.
@@ -146,7 +148,7 @@ This is done by choosing an equivalent lcc category $\Gamma \simeq \mathcal{C}$ 
 
 \textbf{Acknowledgements.}
 This paper benefited significantly from input by several members of the research community.
-I would like to thank the organizers of the TYPES workshop 2019 and the HoTT conference 2019 for giving me the opportunity to speak about preliminary versions of the material in this paper.
+I would like to thank the organizers of the TYPES workshop 2019 and the HoTT conference 2019 for giving me the opportunity to present preliminary versions of the material in this paper.
 Conversations with Emily Riehl, Karol Szumiło and David White made me aware that the constructions in this paper could be phrased model categorically; I believe this improved the presentation significantly.
 Daniel Gratzer pointed out to me the biuniversal property of slice categories.
 Valery Isaev explained to me some aspects of the model category structure on marked objects.
