--- a/main.tex
+++ b/main.tex
@@ -223,7 +223,7 @@ Thus a morphism $K \rightarrow X$ in $\operatorname{Ho} \mathcal{M}$ is marked i
 \end{theorem}
 
 \begin{remark}
-  The classification of weak equivalences in theorem \ref{th:marked-model-category} does not appear as stated in \cite{marked-objects}, but follows easily from results therein.
+  The description of weak equivalences in theorem \ref{th:marked-model-category} does not appear as stated in \cite{marked-objects}, but follows easily from results therein.
   Let $t : \mathrm{Id} \Rightarrow R : \mathcal{M} \rightarrow \mathcal{M}$ be a fibrant replacement functor.
   By \cite[lemma 2.5]{marked-objects}, a map $f : (m_X, X) \rightarrow (m_Y, Y)$ is a weak equivalence in $\mathcal{M}^i$ if and only if $f$ is a weak equivalence in $\mathcal{M}$ and for every diagram (of solid arrows)
   \begin{equation}
@@ -358,13 +358,13 @@ It follows that the left Bousfield localization at any (small) set of maps exist
       The morphism $\mathrm{tm}_1$ given by the unique map from the empty category to the marked category with a single, $\mathrm{Tm}$-marked object.
       $\mathrm{tm}_1$ corresponds to the essentially unique existence of a terminal object.
     \item
-      The morphism $\mathrm{tm}_2$ given by the inclusion of the category
+      The morphism $\mathrm{tm}_2$ given by the inclusion of the category with two objects
       \begin{equation}
         \begin{tikzcd}
           \cdot & t
         \end{tikzcd}
       \end{equation}
-      with two objects such that $t$ is $\mathrm{Tm}$-marked into
+      such that $t$ is $\mathrm{Tm}$-marked into
       \begin{equation}
           \begin{tikzcd}
             \cdot \arrow[r] & t.
@@ -405,7 +405,7 @@ It follows that the left Bousfield localization at any (small) set of maps exist
           \cdot \arrow[r, "f_1"] & \cdot
         \end{tikzcd}
       \end{equation}
-      which is marked with $\mathrm{Pb}$.
+      which is marked via $\mathrm{Pb}$.
       $\mathrm{pb}_1$ corresponds to the essentially unique existence of pullback squares.
     \item
       \label{itm:pbs-factorizations}
