--- a/main.tex
+++ b/main.tex
@@ -214,7 +214,7 @@ Thus a morphism $K \rightarrow X$ in $\operatorname{Ho} \mathcal{M}$ is marked i
   Then the following defines the structure of a combinatorial model category on $\mathcal{M}^i$:
   \begin{itemize}
     \item
-      A morphism $f : (m_X, X) \rightarrow (m_y, Y)$ in $\mathcal{M}^i$ is a cofibration if and only if $f : X \rightarrow Y$ is a cofibration in $\mathcal{M}$.
+      A morphism $f : (m_X, X) \rightarrow (m_Y, Y)$ in $\mathcal{M}^i$ is a cofibration if and only if $f : X \rightarrow Y$ is a cofibration in $\mathcal{M}$.
     \item
       A morphism $f : (m_X, X) \rightarrow (m_Y, Y)$ in $\mathcal{M}^i$ is a weak equivalence if and only if $\gamma(f) : (\gamma(m_X), \gamma(X)) \rightarrow (\gamma(m_Y), \gamma(Y))$ is an isomorphism in $(\operatorname{Ho} \mathcal{M})^{\gamma i}$.
   \end{itemize}
