--- a/main.tex
+++ b/main.tex
@@ -319,7 +319,7 @@ Thus a morphism $K \rightarrow X$ in $\operatorname{Ho} \mathcal{M}$ is marked i
   is a cofibration, and that it is a weak equivalence if either $f$ or $g$ is furthermore a weak equivalence.
   The first part follows directly from the same property for the $\mathrm{Gpd}$-enrichment of $\mathcal{M}$ and the fact that $U$ preserves tensors and pushouts, and reflects cofibrations.
 
-  For the second part, we have in both cases that $f \mathbin{\square} g$ is a weak equivalence when considered as morphism in $\mathcal{M}$.
+  In the second part we have in both cases that $f \mathbin{\square} g$ is a weak equivalence in $\mathcal{M}$.
   Thus we only need to show that $f \mathbin{\square} g$ reflects a given marked morphism $k : i(K) \rightarrow \mathcal{H} \otimes G(Y)$ in $\operatorname{Ho} \mathcal{M}$.
   It follows from the construction of $\mathcal{H} \otimes Y$ that for any such $k$ there exists $w \in \operatorname{Ob} \mathcal{H}$ such that $k = (w \otimes \mathrm{id}) \circ k_0$ for some marked map $k_0 : i(K) \rightarrow G(Y)$.
 
