--- a/main.tex
+++ b/main.tex
@@ -678,7 +678,7 @@ For strict lcc categories $\Gamma$, however, these functors can be constructed u
   Because these data are defined in terms of canonical lcc structure on $\Gamma$, they are preserved by strict lcc functors.
 \end{proof}
 
-The context morphism in our categories with families (cwfs) \citep{internal-type-theory} will usually be defined as functors of categories in the opposite directions.
+The context morphisms in our categories with families (cwfs) \citep{internal-type-theory} will usually be defined as functors of categories in the opposite directions.
 Cwfs are categories equipped with contravariant functors to $\mathrm{Fam}$, the category of families of sets.
 To avoid having dualizing twice, we thus introduce the following notion.
 \begin{definition}
