--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
   As in the original interpretation, we face the issue of coherence:
   Categorical structure is usually preserved by functors only up to isomorphism, whereas syntactic substitution commutes strictly with all type theoretic structure.
   Our solution involves a suitable presentation of the higher category of lcc categories as model category.
-  To that end, we construct a model category of lcc sketches, from which we obtain by the formalism of algebraically (co)fibrant objects model categories of strict lcc categories and then algebraically cofibrant strict lcc categories, and the latter is a model of dependent type theory.
+  To that end, we construct a model category of lcc sketches, from which we obtain by the formalism of algebraically (co)fibrant objects model categories of strict lcc categories and then algebraically cofibrant strict lcc categories, and the latter is our model of dependent type theory.
 \end{abstract}
 
 \section{Introduction}
