Add air force blurp

--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ Daniel Gratzer pointed out to me the biuniversal property of slice categories.
 Valery Isaev explained to me some aspects of the model category structure on marked objects.
 Bas Spitters provided invaluable advice and enabled me to work on this paper.
 
-\todo{AFOSR blurp.}
+This work was supported by the Air Force Office and Scientific Research project ``Homotopy Type Theory and Probabilistic Computation'', grant number 12595060.
 
 \section{Lcc sketches}
 \label{sec:lcc-sketches}
