--- a/main.tex
+++ b/main.tex
@@ -1341,7 +1341,7 @@ In this section we show that the covariant cwf structure on $\operatorname{Coa} 
   $\operatorname{Core} \, ((\operatorname{Coa} \mathrm{sLcc})_{(\Gamma, \lambda) /})$ is a covariant cwf supporting all relevant type constructors by lemmas \ref{lem:coslice-cwf} and \ref{lem:core-cwf}.
   It is democratic and hence equivalent to category \ref{itm:ext-1-category} of lemma \ref{lem:cats-of-weak-exts}.
 
-  Given an arbitrary lcc category $\mathcal{C}$, we set $\Gamma = F(\mathcal{C})$ and define coalgebra structure by $\lambda = F(\eta) : F(\mathcal{C}) \rightarrow F(G(F(\mathcal{C}))$.
+  Given an arbitrary lcc category $\mathcal{C}$, we set $\Gamma = F(\mathcal{C})$ and define coalgebra structure by $\lambda = F(\eta) : F(\mathcal{C}) \rightarrow F(G(F(\mathcal{C})))$.
   Then $G(\Gamma)$ is equivalent to both $\mathcal{C}$ and a cwf supporting the relevant type constructors.
 \end{proof}
 
