Add url to marked objects citation

--- a/main.bib
+++ b/main.bib
@@ -4,7 +4,8 @@
   year={2016},
   eprint={1610.08459},
   archivePrefix={arXiv},
-  primaryClass={math.CT}
+  primaryClass={math.CT},
+  url={https://arxiv.org/abs/1610.08459}
 }
 
 @article{algebraic-models,
