Fix variable name

--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@ $\mathrm{Lcc}$ is constructed as left Bousfield localization of a model category
   A map of the form $k : i(K) \rightarrow X$ is \emph{marked} if $k \in m_X(K)$.
 
   A morphism of $i$-marked objects is a marking-preserving morphism of underlying objects in $\mathcal{C}$, i.e.\@ a morphism $f : X \rightarrow Y$ such that the image of $m_X$ under postcomposition by $f$ is contained in $m_Y$.
-  The category of $i$-marked objects is denoted by $\mathcal{M}^i$.
+  The category of $i$-marked objects is denoted by $\mathcal{C}^i$.
 \end{definition}
 
 The forgetful functor $U : \mathcal{C}^i \rightarrow \mathcal{C}$ has a left and right adjoint:
